--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -17,7 +17,7 @@
         .discountInfoLSide.floatLeft
           %ul.infoImgSilde
             %li
-              = image_tag( @product.image_url(:normal), :width => "260", :height => "195", :title => @product.title, :alt => @product.title )
+              = image_tag( @product.image_url(:normal), :title => @product.title, :alt => @product.title )
         .discountInfoRSide.floatLeft
           %ul
             %li.listCol
