--- a/app/views/products/_discount_type.html.haml
+++ b/app/views/products/_discount_type.html.haml
@@ -1,15 +1,8 @@
 %label.floatLeft= t('.discount')
 .floatLeft.fRSide
-  %span.discountName= "[#{DISCOUNT_TYPE_NAME[product.discount_type]}]"
-  - case product.discount_type
-  - when DISCOUNT_TYPE_DISCOUNT
-    %span.discountWord= "直享"
-    %span.discountNum= product.discount
-    %span.discountWord= "折"
-  - when DISCOUNT_TYPE_PRICE
-    %span.discountWord= "最低"
-    %span.discountNum= product.discount
-    %span.discountWord= "元"
-  - when DISCOUNT_TYPE_NEW
-    %span.discountWord= product.specific
+  %span.discountWord= product.discount_part1
+  %span.discountNum= product.discount_part2
+  %span.discountWord= product.discount_part3
+  %span.discountNum= product.discount_part4
+  %span.discountWord= product.discount_part5
 
