--- a/app/views/home/_couponmap.html.erb
+++ b/app/views/home/_couponmap.html.erb
@@ -23,9 +23,10 @@
             <% discount_string = "#{product.discount_part1} <strong> #{product.discount_part2} </strong> #{product.discount_part3} <strong> #{product.discount_part4} </strong> #{product.discount_part5}" %>
             var content = <%= '"'.html_safe %> \
                 <%= "<div style='color:#666;line-height:20px;'>".html_safe %> \
-                <%= "<h3 style='font-size:16px;'>吉林美优惠网</h3>".html_safe %> \
-                <%= "#{product.title}<br/>".html_safe %> \
+                <%= "<h3 style='font-size:16px;'>#{product.shop_name}</h3>".html_safe %> \
+                <%= "结束时间：#{get_format_time(product.end_at)}<br/>".html_safe %> \
                 <%= "优惠方式：#{discount_string}<br/>".html_safe %> \
+                <%= "地址：#{product.address}<br/>".html_safe %> \
                 <%= "<a target='_blank' href='#{product_path(product)}'>详情 »</a>".html_safe %> \
                 <%= '</div>"'.html_safe %>;
             addMarkerContent(point, content);
