modify title keyword description for SEO

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,8 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
     = favicon_link_tag
+    <meta name="keywords", content="吉林市,打折,优惠,团购,美食,购物" />
+    <meta name="description", content="吉林美打折优惠网 - 免费提供吉林市美食、娱乐、电影、生活、酒店、购物等打折信息、优惠信息和团购信息, 免费下载折扣券和优惠券, 吉林市最快最全最好的打折优惠团购聚合平台" />
 
   %body#deal-default
     #doc
