--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -37,4 +37,9 @@
     吉ICP备12006122号-1
 %div{:style=>"display:none"}
   %script{:src=>"http://s23.cnzz.com/stat.php?id=4669675&web_id=4669675&show=pic", :language=>"JavaScript"}
+  <script type="text/javascript">
+  var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+  document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F264a3a29318e48928767e11630ea5660' type='text/javascript'%3E%3C/script%3E"));
+  </script>
+%ul.cert.cf
 
