importantgit status! fix jquery production not working problem

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -19,8 +19,8 @@
     %ul.nav
       %li= link_to "今日优惠", root_path, {:class=>"hover"}
       %li= link_to "美食", "/filters/select/1/all/"
-      %li= link_to "娱乐", "/filters/select/2/all/"
-      %li= link_to "电影", "/filters/select/3/all/"
+      %li= link_to "购物", "/filters/select/2/all/"
+      %li= link_to "丽人", "/filters/select/3/all/"
       %li= link_to "生活", "/filters/select/4/all/"
       %li= link_to "酒店", "/filters/select/5/all/"
     %ul.user-info
