--- a/app/views/products/_index.html.haml
+++ b/app/views/products/_index.html.haml
@@ -1,22 +1,31 @@
-- @products.each do |product|
-  #filter.radius-box-shadow
-    .clearfix
-      .couponContentWrap
-        .couponInfoWrap.clearfix
-          .couponInfoLSide.floatLeft
-            %ul.infoImgSilde
-              %li
-                = link_to image_tag( product.image_url(:small), :title => product.title, :alt => product.title ), product_path(product), { :target => "_blank" }
-          .couponInfoRSide.floatLeft
-            .globalTitle.title
-              = link_to product.title, product_path(product), { :target => "_blank" }
-            %ul
-              %li.listCol
-                %label.floatLeft= t('.time')
-                .floatLeft.fRSide
-                  %span= get_format_time(product.end_at)
-              %li.listCol.clearfix
-                = render "products/discount_type", :product => product
-              %li.listCol.clearfix
-                = link_to t('.detail_button'), product_path(product), { :target => "_blank", :hidefocus=>"true", :class=>"button", :rel=>"nofollow" }
+#content-index
+  - @products.each do |product|
+    #filter.radius-box-shadow
+      .clearfix
+        .couponContentWrap
+          .couponInfoWrap.clearfix
+            .couponInfoLSide.floatLeft
+              %ul.infoImgSilde
+                %li
+                  = link_to image_tag( product.image_url(:small), :title => product.title, :alt => product.title ), product_path(product), { :target => "_blank" }
+            .couponInfoRSide.floatLeft
+              .globalTitle.title
+                = link_to product.title, product_path(product), { :target => "_blank" }
+              %ul
+                %li.listCol
+                  %label.floatLeft= t('.time')
+                  .floatLeft.fRSide
+                    %span= get_format_time(product.end_at)
+                %li.listCol.clearfix
+                  = render "products/discount_type", :product => product
+                %li.listCol.clearfix
+                  = link_to t('.detail_button'), product_path(product), { :target => "_blank", :hidefocus=>"true", :class=>"button", :rel=>"nofollow" }
 
+#sidebar-taobao
+  .side-single.radius-box-shadow
+    <script type="text/javascript">
+    alimama_pid="mm_41432167_3506732_11485413";
+    alimama_width=160;
+    alimama_height=600;
+    </script>
+    <script src="http://a.alimama.cn/inf.js" type="text/javascript"></script>
