--- a/app/views/products/_index.html.haml
+++ b/app/views/products/_index.html.haml
@@ -21,6 +21,9 @@
                 %li.listCol.clearfix
                   = link_to t('.detail_button'), product_path(product), { :target => "_blank", :hidefocus=>"true", :class=>"button", :rel=>"nofollow" }
 
+  .page-nav-wrapper
+    = paginate @products
+
 #sidebar-taobao
   .side-single.radius-box-shadow
     <script type="text/javascript">
