--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -10,8 +10,7 @@
   /    %li= link_to "邀请好友", "/referrals", {:class=>"refer", :target=>"_blank"}
   /    %li= link_to "常见问题", "/faq", {:class=>"last"}
   .search.cf.radius-box-shadow
-    %form{:action=>"/s/", :name=>"searchForm", :method=>"get"}
-    = form_tag search_filters_path, :method=>"post" do |f|
+    = form_tag search_filters_path, :method=>"get" do |f|
       = text_field_tag :keywords, nil, {:class=>"s-text", :autocomplete=>"off", :placeholder=>t('.keyword_background')}
       = submit_tag t('.search_button'), {:class=>"s-submit", :hidefocus=>"true"}
 .site-nav
