--- a/app/views/redact/products/index.html.haml
+++ b/app/views/redact/products/index.html.haml
@@ -42,5 +42,8 @@
               | 
               = link_to t('.edit_button'), edit_redact_product_path(product)
 
+      .page-nav-wrapper
+        = paginate @products
+
 #sidebar
 
