--- a/app/assets/stylesheets/slider.css
+++ b/app/assets/stylesheets/slider.css
@@ -1,72 +1,46 @@
-/* Demo CSS - You do not need this css in your own slider */
+/* copy from bootstrap and modify somthing */
 
-body{
-	font-family: "Open Sans", helvetica, arial;
+.bjqs-caption {
+	background: rgba(0,0,0,0.5);
+  font-size: 18px;
+  font-weight: bold;
+  color: #fff;
 }
 
-pre{
-	font-family: "Source Code Pro", monospace;
-	display: block;
-	padding: 9.5px;
-	margin: 0 0 10px;
-	font-size: 13px;
-	line-height: 20px;
-	word-break: break-all;
-	word-wrap: break-word;
-	white-space: pre;
-	white-space: pre-wrap;
-	background-color: whiteSmoke;
-	border: 1px solid #CCC;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
-}
-
-h2{
-	font-size: 48px;
-}
-
-pre + h2{
-	margin-top: 80px;
-}
-
-#container{
-	max-width:620px;
-	margin:0 auto;
-	padding-bottom:80px;
-}
-
-#banner-fade,
-#banner-slide{
-	margin-bottom: 60px;
-}
-
-ul.bjqs-controls.v-centered li a{
-	display:block;
-	padding:10px;
-	background:#fff;
-	color:#000;
+.bjqs-prev a,
+.bjqs-next a {
+  position: absolute;
+  top: 40%;
+  left: 15px;
+  width: 40px;
+  height: 40px;
+  margin-top: -20px;
+  font-size: 60px;
+  font-weight: 100;
+  line-height: 30px;
+  color: #ffffff;
 	text-decoration: none;
+  text-align: center;
+  background: #222222;
+  border: 3px solid #ffffff;
+  -webkit-border-radius: 23px;
+     -moz-border-radius: 23px;
+          border-radius: 23px;
+  opacity: 0.5;
+  filter: alpha(opacity=50);
 }
 
-ul.bjqs-controls.v-centered li a:hover{
-	background:#000;
-	color:#fff;
+.bjqs-next a {
+  right: 15px;
+  left: auto;
 }
 
-ol.bjqs-markers li a{
-	padding:5px 10px;
-	background:#000;
-	color:#fff;
-	margin:5px;
-	text-decoration: none;
-}
-
-ol.bjqs-markers li.active-marker a,
-ol.bjqs-markers li a:hover{
-	background: #999;
-}
-
-p.bjqs-caption{
-	background: rgba(255,255,255,0.5);
+.bjqs-prev a:hover,
+.bjqs-prev a:focus,
+.bjqs-next a:hover,
+.bjqs-next a:focus {
+  color: #ffffff;
+  text-decoration: none;
+  opacity: 0.9;
+  filter: alpha(opacity=90);
 }
