add home/map and products/index page; add carousel show

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,5 @@
 - provide(:title, t('.title'))
-%div#sliders-show
+%div#slider-show
   %ul.bjqs
     %li
       = image_tag "slider_1.jpg", :title=>"slider 1"
