finish products carousel page

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,5 @@
 - provide(:title, t('.title'))
-%div#slider-show
+%div#slider-show.radius-box-shadow
   %ul.bjqs
     %li
       = image_tag "slider_1.jpg", :title=>"slider 1"
