--- a/app/assets/stylesheets/carousel.css
+++ b/app/assets/stylesheets/carousel.css
@@ -8,7 +8,7 @@
 
 #da-vinci-title {
 	display:none;	
-	color:#f90;
+	color:#FFFF00;
 	font-family:Georgia, "Times New Roman", Times, serif;
 	font-size:17px;
 	font-weight:bold;
