--- a/app/assets/stylesheets/articles.css
+++ b/app/assets/stylesheets/articles.css
@@ -48,7 +48,7 @@
 .articleDetailsInfo .content{
     color:#666;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 15px;
     margin-bottom: 15px;
 }
 
@@ -63,6 +63,7 @@
     float: left;
     display: inline;
     width: 200px;
+    height: 327px;
     padding: 14px;
     margin: 0 14px 14px 0;
     background: #fff;
