--- a/app/views/articles/_index.html.haml
+++ b/app/views/articles/_index.html.haml
@@ -2,7 +2,7 @@
   %ul.articleIndexWrap
     - @articles.each do |article|
       %li.radius-box-shadow
-        = link_to image_tag( article.thumb, :title => article.title, :alt => article.title ), article_path(article), { :target => "_blank" }
+        = link_to image_tag( article.thumb, :title => article.title, :alt => article.title, :width=>"200", :height=>article.thumb_height>300 ? 300:article.thumb_height ), article_path(article), { :target => "_blank" }
         %h4= link_to article.title, article_path(article), { :target => "_blank" }
 
   .page-nav-wrapper
