--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -11,5 +11,8 @@
   %h3= t('.products_title')
 = render "filters/home_filter"
 = render "products/index"
+.block-title
+  %h3= t('.articles_title')
+= render "articles/index"
 #sidebar
 
