--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,5 +1,5 @@
 - provide(:title, t('.title'))
-%div#carousel-show.radius-box-shadow
+#carousel-show.radius-box-shadow
   - @carousel_products.each do |product|
     = link_to image_tag(product.image, :title=>product.shop_name, :alt=>product.title, :width=>150, :class=>"cloudcarousel"), product_path(product), { :target => "_blank" }
   #da-vinci-title
