modify slider finish; modify site name

--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -2,7 +2,7 @@
 #content.pg-login
   .mainbox.radius-box-shadow
     %h3= t('.title')
-    %p~ "    吉林美优惠网成立于2012年11月27日，旨在为江城百姓打造一个贴心的消费向导，为江城商铺提供一个信息展示的平台。消费者可以从吉林美网上方便地获知身边最新的商品优惠信息和商家促销活动，免费获得更低的折扣，愉快分享消费心得；商家可以通过吉林美网发布促销活动、展示新品，宣传产品理念，拉近客户的距离。"
+    %p~ "    吉林美打折成立于2012年11月27日，旨在为江城百姓打造一个贴心的消费向导，为江城商铺提供一个信息展示的平台。消费者可以从吉林美网上方便地获知身边最新的商品优惠信息和商家促销活动，免费获得更低的折扣，愉快分享消费心得；商家可以通过吉林美网发布促销活动、展示新品，宣传产品理念，拉近客户的距离。"
     %br
     %br
 
@@ -18,8 +18,7 @@
     %br
 
     %h3= t('.team')
-    %p 我们是东北电力大学大学生创业团队，我们是一群热血青年，我们在为加速吉林市信息化进程而努力奋斗着。
-    %p 我们也是土生土长的吉林市人，我们爱这个城市，我们了解这个城市，我们希望把这个城市变得更加美好。
+    %p 我们团队成员都来自百度，阿里，搜狐等国内知名互联网企业，我们对互联网产品有着深刻的理解。同时，我们也是土生土长的吉林市人，我们爱这个城市，希望把家乡变得更加美好，我们一直在为加速吉林市信息化进程而努力奋斗着。
     %br
     %br
 
