--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -3,9 +3,11 @@
   #slider-show
     %ul.bjqs
       %li
-        = link_to image_tag("slider_1.jpg"), "/map", {:target => "_blank"}
+        = link_to image_tag("slider_1.jpg", :title=>"优惠地图：吉林市当日打折优惠信息一目了然"), "/map", {:target => "_blank"}
       %li
-        = link_to image_tag("slider_2.jpg"), products_path, {:target => "_blank"}
+        = link_to image_tag("slider_2.jpg", :title=>"合作商家：美食、购物、丽人、生活、酒店样样俱全"), products_path, {:target => "_blank"}
+      %li
+        = link_to image_tag("slider_3.jpg", :title=>"吉林美打折网：白领消费观，购物新风尚！"), products_path, {:target => "_blank"}
 .block-title
   %span.title= t('.products_title')
   %span.space
