--- a/app/assets/stylesheets/carousel.css
+++ b/app/assets/stylesheets/carousel.css
@@ -1,6 +1,6 @@
 #carousel-show {
   width: 960px;
-  height: 400px;
+  height: 382px;
   background: url(carousel_bg.jpg);
   border: 1px #d4d4d4 solid;
   overflow: scroll;
@@ -8,7 +8,7 @@
 
 #da-vinci-title {
 	display:none;	
-	color:#FFFF00;
+	color:#F80;
 	font-family:Georgia, "Times New Roman", Times, serif;
 	font-size:17px;
 	font-weight:bold;
@@ -20,7 +20,7 @@
 }
 #da-vinci-alt{
 	display:none;	
-	color:#ddd;
+	color:#EEE;
 	margin:20px;
 	margin-top:0px;
 	font-size:14px;
