--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -20,11 +20,11 @@
       %li= link_to "商家优惠", products_path, {:class=>active_channel?("products", "index") ? "hover":nil}
       %li= link_to "附近优惠", "/map", {:class=>active_channel?("home", "map") ? "hover":nil}
       %li= link_to "衣妆达人", articles_path, {:class=>active_channel?("articles", "index") ? "hover":nil}
-      %li= link_to "美食", "/filters/select/1/all/"
-      %li= link_to "购物", "/filters/select/2/all/"
-      %li= link_to "丽人", "/filters/select/3/all/"
-      %li= link_to "生活", "/filters/select/4/all/"
-      %li= link_to "酒店", "/filters/select/5/all/"
+      /%li= link_to "美食", "/filters/select/1/all/"
+      /%li= link_to "购物", "/filters/select/2/all/"
+      /%li= link_to "丽人", "/filters/select/3/all/"
+      /%li= link_to "生活", "/filters/select/4/all/"
+      /%li= link_to "酒店", "/filters/select/5/all/"
     %ul.user-info
       - if user_signed_in?
         %li.name= t('.welcome', :user_name=>current_user.name)
