--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -35,8 +35,8 @@
     %li jilinmei@gmail.com
 .copyright
   %p
-    ©2012 吉林美打折网 jilinmei.com
-    吉ICP备12006122号-1
+    ©2012-2013 吉林美打折网 jilinmei.com
+    = link_to "吉ICP备12006122号-1", "http://www.miibeian.gov.cn/", { :target => "_blank" }
 %div{:style=>"display:none"}
   %script{:src=>"http://s23.cnzz.com/stat.php?id=4669675&web_id=4669675&show=pic", :language=>"JavaScript"}
   <script type="text/javascript">
