1.add on_shelf and off_shelf for supers and writers; 2.copy 404 page from meituan

--- a/app/views/admin/products/_subbar.html.haml
+++ b/app/views/admin/products/_subbar.html.haml
@@ -10,9 +10,17 @@
     = t('admin.products.edit.title')
   - when "update"
     = t('admin.products.edit.title')
+  - when "on_shelf"
+    = t('admin.products.on_shelf.title')
+  - when "off_shelf"
+    = t('admin.products.off_shelf.title')
 %uj.filter
   %li{:class => (action_name == "index" ? "current" : nil)}
     = link_to t('.index_button'), admin_products_path
+  %li{:class => (action_name == "on_shelf" ? "current" : nil)}
+    = link_to t('.on_shelf_button'), on_shelf_admin_products_path
+  %li{:class => (action_name == "off_shelf" ? "current" : nil)}
+    = link_to t('.off_shelf_button'), off_shelf_admin_products_path
   %li{:class => ((action_name == "new" or action_name == "create") ? "current" : nil)}
     = link_to t('.new_button'), new_admin_product_path
 
