--- a/app/views/simple_captcha/_simple_captcha.erb
+++ b/app/views/simple_captcha/_simple_captcha.erb
@@ -43,6 +43,6 @@
     <%= simple_captcha_options[:image] %>
   </div>
   <div class='simple_captcha_info'>
-    (*请输入图片中的数字)
+    (请输入图片中的数字)
   </div>
 </div>
