--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -10,14 +10,14 @@
         = link_to image_tag("slider_3.jpg", :title=>"吉林美打折网：白领消费观，购物新风尚！快开始新的消费体验吧"), products_path, {:target => "_blank"}
 .block-title
   %span.title= t('.products_title')
-  %span.space
-  = link_to t('.more_products'), products_path
+  /%span.space
+  /= link_to t('.more_products'), products_path
 = render "filters/home_filter"
 = render "products/index"
-.block-title
-  %span.title= t('.articles_title')
-  %span.space
-  = link_to t('.more_articles'), articles_path
-= render "articles/index"
-#sidebar
+/.block-title
+/  %span.title= t('.articles_title')
+/  %span.space
+/  = link_to t('.more_articles'), articles_path
+/= render "articles/index"
+/#sidebar
 
