--- a/app/views/filters/_home_filter.html.haml
+++ b/app/views/filters/_home_filter.html.haml
@@ -3,7 +3,7 @@
     %span.label= t('.category')
     %ul
       %li{:class => "current"}
-        = link_to t('.all'), "/filters/select/all/#{params[:d_id]}/"
+        = link_to t('.all'), "/filters/select/all/all/"
       /%li{:class => (action_name == "today" ? "current" : nil)}
       /  = link_to "#{t('.today')}<span>(#{today_product_count})</span>".html_safe, today_filters_path
       - @categories.each do |category|
@@ -13,7 +13,7 @@
     %span.label= t('.district')
     %ul
       %li{:class => "current"}
-        = link_to t('.all'), "/filters/select/#{params[:c_id]}/all/"
+        = link_to t('.all'), "/filters/select/all/all/"
       - @districts.each do |district|
         %li
           = link_to "#{district.cn_name}<span>(#{on_shelf_count(district.products)})</span>".html_safe, "/filters/select/all/#{district.id}/"
