--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,14 @@
     = favicon_link_tag
     <meta name="keywords", content="吉林市,打折,优惠,团购,美食,购物" />
     <meta name="description", content="吉林美打折优惠网 - 免费提供吉林市美食、娱乐、电影、生活、酒店、购物等打折信息、优惠信息和团购信息, 免费下载折扣券和优惠券, 吉林市最快最全最好的打折优惠团购聚合平台" />
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-40336654-1', 'jilinmei.com');
+    ga('send', 'pageview');
+    </script>
 
   %body#deal-default
     #doc
