--- a/app/assets/stylesheets/coupon_index.css
+++ b/app/assets/stylesheets/coupon_index.css
@@ -2,7 +2,7 @@
 .couponContentWrap{
     width:710px;
     background: #fff;
-    padding: 20px;
+    margin: 5px;
 }
 .couponInfoLSide .infoImgSilde{
     width: 195px;
@@ -90,7 +90,7 @@
 
 #content-index {
     float:left;
-    width:750px;
+    width:960px;
     _display:inline;
     padding:0
 }
