--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,6 +1,7 @@
 !!!
 %html
   %head
+    <meta http-equiv=Content-Type content="text/html;charset=utf-8">
     - if controller_name == "home" and action_name == "index"
       %title= "#{yield(:title)}"
     - else
