--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -12,7 +12,7 @@
     %ul.nav
       %li= link_to "今日优惠", root_path, {:class=>active_channel?("home", "index") ? "hover":nil}
       %li= link_to "附近优惠", "/map", {:class=>active_channel?("home", "map") ? "hover":nil, :rel=>"nofollow"}
-      %li= link_to "衣妆达人", articles_path, {:class=>active_channel?("articles", "index") ? "hover":nil}
+      %li= link_to "衣妆达人", articles_path, {:class=>active_channel?("articles", "index") ? "hover":nil, :rel=>"nofollow"}
     %ul.user-info
       - if user_signed_in?
         %li.name= t('.welcome', :user_name=>current_user.name)
